# Sandpile_Model_BMP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/parser/: parser.cpp  parser.h  readTSV.cpp  test.tsv
lib/sandpile/: sandpile.cpp  sandpile.h  utilities.cpp
lib/setupBMP/: setupBMP.cpp  setupBMP.h
